# bbcalc

./: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  bbcalc  configure  configure.in
bbcalc/: __init__.py  bbcalc  main.py
bbcalc/calculators/: bmi.py  bodyfat.py  idealbody.py  onerepmax.py  running.py
bbcalc/glade/: mainwindow.glade
bbcalc/gui/: about.py  preferences.py
bbcalc/gui/calculators/: baseclass.py  bmi.py  bodyfat.py  idealbody.py  onerepmax.py  running.py  weightunits.py
bbcalc/lib/: initialize.py  version.py
bbcalc/utils/: __init__.py  config.py  unitconvertor.py
data/: Makefile.am  Makefile.in  bbcalc.applications  bbcalc.desktop  bbcalc.schemas.in
data/glade/: bmi_window.glade  bodyfat_window.glade  ideal_body_window.glade  main_window.glade  one_rep_max_window.glade  preferences_window.glade  running_window.glade  weightunits_window.glade
debian/: changelog  control  copyright  dirs  docs  rules
glade/: Makefile.am  Makefile.in  bbcalc.glade  bmi.glade  bodyfat.glade  ideal_body.glade  mainwindow.glade  one_rep_max.glade  prefs.glade  running.glade  weightunits.glade
gnome/help/bbcalc/C/: bbcalc.xml
help/: Makefile.am  Makefile.in  bbcalc.omf.in
help/C/: bbcalc.xml
i18n/ru/LC_MESSAGES/: bbcalc.mo
images/: Makefile.am  Makefile.in
lib/: Makefile.am  Makefile.in  __init__.py  initialize.py  paths.py  version.py
lib/calculators/: Makefile.am  Makefile.in  bmi.py  bodyfat.py  idealbody.py  onerepmax.py  running.py
lib/gui/: Makefile.am  Makefile.in  about.py  glade.py  main.py  preferences.py
lib/gui/calculators/: Makefile.am  Makefile.in  bmi.py  bodyfat.py  calculator.py  idealbody.py  onerepmax.py  running.py  weightunits.py
lib/utils/: Makefile.am  Makefile.in  __init__.py  config.py  gconfclass.py  unitconvertor.py
po/: Makefile  POTFILES.in  bbcalc.pot  ru.po
scripts/: Makefile.am  Makefile.in  bbcalc.sh.in
