SUBDIRS = data glade help images po

DISTCHECK_CONFIGURE_FLAGS = --disable-scrollkeeper

bin_SCRIPTS = bbcalc

DISTCLEANFILES =		\
	intltool-extract	\
	intltool-merge		\
	intltool-update		\
	gnome-doc-utils.make

EXTRA_DIST =			\
	intltool-extract.in	\
	intltool-merge.in	\
	intltool-update.in	\
	gnome-doc-utils.make
