SUBDIRS = data glade help images lib po scripts

DISTCHECK_CONFIGURE_FLAGS = --disable-scrollkeeper

bbcalcdir = $(datadir)/bbcalc
bbcalc_SCRIPTS = bbcalc	

DISTCLEANFILES =		\
	intltool-extract	\
	intltool-merge		\
	intltool-update		\
	gnome-doc-utils.make

EXTRA_DIST =			\
	intltool-extract.in	\
	intltool-merge.in	\
	intltool-update.in	\
	$(bbcalc_SCRIPTS)	\
	gnome-doc-utils.make
