# ******************************************************************************
# Glade Files
# ******************************************************************************
gladedir   = $(datadir)/bbcalc/glade
glade_DATA = bbcalc.glade bbcalc.png prefs.glade bmi.glade bodyfat.glade \
	ideal_body.glade one_rep_max.glade running.glade weightunits.glade

EXTRA_DIST = $(glade_DATA)